<resources>
    <string name="app_name">Company_Application</string>
    <string name="support_menu_list_of_user_requests">Список обращений</string>
    <string name="support">Служба поддержки</string>
    <string name="activity_user_requests_label">Список обращений пользователей</string>
    <string name="support_menu_project">Проект</string>
    <string name="support_menu_reports">Отчеты</string>
    <string name="request">Обращения пользователей</string>
    <string name="activity_request_button_done">Выполнено</string>
    <string name="activity_request_editText_hint">Введите ответ пользователю</string>
    <string name="activity_request_editText_autofill_hint">Здравствуйте!</string>
    <string name="activity_request_button_answer">Ответить</string>
    <string name="activity_report_add_label">Добавить отчет</string>
    <string name="save">Сохранить</string>
    <string name="activity_report_add_code_textField_hint">Введите код</string>
    <string name="activity_report_add_name_textField_hint">Введите наименование</string>
    <string name="activity_report_add_description_textField_hint">Введите описание</string>
    <string name="activity_report_label">Отчет</string>
    <string name="personal">Личный кабинет</string>
    <string name="projects">Проекты</string>
    <string name="reports">Отчеты</string>
    <string name="staff">Реестр сотрудников</string>
    <string name="fio">ФИО:</string>
    <string name="department">Отдел:</string>
    <string name="position">Позиция:</string>
    <string name="grade">Грейд:</string>
    <string name="skills">Навыки:</string>
    <string name="add">Добавить</string>
    <string name="search">Поиск</string>
    <string name="candidates">Кандидаты</string>
    <string name="send">Отправить</string>
    <string name="problem">Опишите Вашу проблему</string>
    <string name="project_add">Добавление проекта</string>
    <string name="skills_add">Добавить скиллы</string>
    <string name="activity_candidates_addCandidate_text">Добавить</string>
    <string name="activity_candidates_labelText">Кандидаты</string>
    <string name="activity_candidate_label">Кандидат</string>
    <string name="activity_candidate_add_grade_textField_hint">Введите грейд</string>
    <string name="activity_candidate_add_FIO_textField_hint">Введите ФИО</string>
    <string name="activity_candidate_add_role_textField_hint">Введите роль</string>
    <string name="activity_candidate_add_position_textField_hint">Введите позицию</string>
    <string name="activity_candidate_add_skills_textField_hint">Введите навыки</string>
    <string name="activity_candidate_saveBtn_text">Сохранить</string>
    <string name="activity_candidate_deleteBtn_text">Удалить</string>
    <string name="task">Задача</string>
    <string name="status">Статус</string>
    <string name="staff_one">Сотруд.</string>
    <string name="skills_table">Навыки</string>
    <string name="personal_staff">Личный кабинет сотрудника</string>
    <string name="search_by_skills">Поиск по скиллам</string>
    <string name="search_by_date">Кол-во дней</string>
    <string name="skills_add_tv">Введите название навыка</string>
    <string name="skills_add_but">Добавить навык</string>

</resources>