<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.project.ProjectDetailActivity">

    <TableLayout
        android:id="@+id/task_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:id="@+id/row">

            <TextView
                android:id="@+id/task_column"
                android:padding="3dip"
                android:layout_width="0dp"
                android:text="@string/task"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/status_column"
                android:padding="3dip"
                android:layout_width="0dp"
                android:text="@string/status"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/staff_column"
                android:layout_width="0dp"
                android:padding="3dip"
                android:text="@string/staff_one"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:id="@+id/skills_column"
                android:layout_width="0dp"
                android:padding="3dip"
                android:text="@string/skills_table"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/save_project_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="484dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_table" />
</androidx.constraintlayout.widget.ConstraintLayout>
